# pytinhas

./: .flake8  .gitignore  README.md  pyproject.toml  pytinhas.session.sql  sonar-project.properties  typescript
.github/workflows/: github-actions-demo.yml  linter.yml
TestNodemcu/: platformio.ini
TestNodemcu/src/: main.cpp
pytinhas/: app.py  dados.txt  environments.py  main.cpp  main.py  my_pytinhas.py
pytinhas/ext/: database.py
pytinhas/ext/site/: main.py
pytinhas/models/: pytinha.py
pytinhas/templates/: index.html
pytinhas/templates/pytinha/: create.html  create_confirm.html
scripts/Esp8266/: platformio.ini
scripts/Esp8266/src/: main.cpp  secrets.h
scripts/Esp8266/test/: dht11.cpp  display.cpp
scripts/Python/: my_pytinhas.py  sun_on.py  test.py
tests/: test_pytinhas_1.py
